# nomad-distro-LAP

./: Dockerfile  README.md  clean_up_pull_start_new.bat  clean_up_pull_start_new.ps1  docker-compose.yaml  infos.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml  docker-publish_dev.yml
configs/: nomad.yaml
